update doku :id/history
