# routes/c3attack.js
@@ -24,6 +24,13 @@ async function getWritableColumns() {
 }
 
 router.get("/", async (req, res) => {
+  /*
+  #swagger.tags = ['C3 Attack']
+  #swagger.summary = 'Get all attacks of a given season'
+  #swagger.parameters['seasonId'] = { description: 'ID of the given season', required: true, type: 'integer' }
+*/
+
+
   const ip = req.headers["x-forwarded-for"] || req.socket.remoteAddress || null;
 
   try {
